# new-portfolio

./: .gitignore  Cargo.toml  DOCKER_SSH_SETUP.md  Dockerfile  README.md  docker-compose.yml  give_perms.sh  start.sh
src/: app.rs  local_tui.rs  main.rs
src/pages/: about.rs  contact.rs  experience.rs  leadership.rs  mod.rs  page.rs  projects.rs  style.rs
src/pages/labels/: container.rs  expo.rs  fastapi.rs  flask.rs  groq.rs  javascript.rs  kinde_auth.rs  label.rs  mod.rs  modal.rs  nextjs.rs  pinecone.rs  pocketbase.rs  python.rs  retell_ai.rs  supabase.rs  sveltekit.rs  tailwind.rs  typescript.rs  vexo_analytics.rs  websocket.rs
src/pages/labels/aws/: eventbridge_scheduler.rs  lambda.rs  mod.rs  s3.rs  sagemaker.rs
src/pages/labels/cloudflare/: images.rs  mod.rs  workers.rs
src/pages/labels/react/: mod.rs  react.rs  react_native.rs
src/server/: app_server.rs  mod.rs
