[package]
name = "portfolio-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = "2.0.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
image = "0.25.8"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
